syntax = "proto3";

package grpc.rococo;

option java_multiple_files = true;
option java_package = "grpc.rococo";
option java_outer_classname = "UserdataProto";

service UserdataService {
    rpc User(UsernameRequest) returns (UserResponse) {}
    rpc UpdateUser(UserRequest) returns (UserResponse) {}
}

message UsernameRequest {
    string username = 1;
}

message UserRequest {
    string username = 1;
    string firstname = 2;
    string lastname = 3;
    string avatar = 4;
}

message UserResponse {
    string id = 1;
    string username = 2;
    string firstname = 3;
    string lastname = 4;
    string avatar = 5;
}

